UI FIX: app store button responsiveness fix on small devices

--- a/resources/css/queries.css
+++ b/resources/css/queries.css
@@ -103,7 +103,7 @@
     }
     
     .btn-app img {
-    height:45px;
+    height:35px;
     width:auto;
     margin-right: 20px;
     text-decoration: none; /*get rid of the underline */
